# jmiramont.github.io

./: Gemfile  _config.yml  get_pubs.py  get_pubs_2.py  index.html  index.markdown  paper.html  pyproject.toml
.github/workflows/: update_pubs.yaml
_data/: author.yaml  publications.json
_layouts/: default.html
_pages/: blog_main.markdown  index.markdown  publications.markdown
_posts/: 2024-02-25-welcome-to-jekyll.markdown  2025-04-23-welcome-to-jekyll.markdown
_sass/: _general.scss
